Get sure synchandler exists before calling it

This should be important just on password sync, cause of code design.
Anyway, checking it everytime shouldn't be a bad idea...

BUG: 289146